# Elastos.ELA.SPV.Cpp

./: .gitignore  .gitmodules  CMakeLists.txt  CMemBlock.h  README.md
Core/: BRAddress.c  BRAddress.h  BRBIP38Key.c  BRInt.c  BRInt.h  BRKey.c  BRMerkleBlock.c  BRPeer.c  BRPeerManager.c  BRPeerMessages.c  BRTransaction.c  BRTransaction.h  CMakeLists.txt
Data/: CoinConfig.json  Config.cfg
Interface/: Enviroment.h  IMasterWallet.h  IMasterWalletManager.h  INeochainSubWallet.h  ISidechainSubWallet.h  ISubWallet.h  MasterWalletManager.h
SDK/: CMakeLists.txt
SDK/Account/: Account.cpp  Account.h  HDSubAccount.cpp  HDSubAccount.h  IAccount.h  ISubAccount.h  MultiSignAccount.cpp  MultiSignSubAccount.cpp  MultiSignSubAccount.h  SideAccount.cpp  SideAccount.h  SingleSubAccount.cpp  SingleSubAccount.h  StandardAccount.cpp  StandardAccount.h  StandardSingleSubAccount.cpp  StandardSingleSubAccount.h  SubAccount.cpp  SubAccountBase.cpp  SubAccountBase.h
SDK/Base/: Address.cpp
SDK/Common/: BTCKey.cpp  BTCKey.h  CMakeLists.txt  CMemBlock.h  Crypto.cpp  Log.h  Utils.cpp  Utils.h  uchar_vector.h
SDK/Crypto/: MasterPubKey.cpp  MasterPubKey.h
SDK/Database/: DatabaseManager.cpp  DatabaseManager.h  Nep5LogDataStore.cpp  Nep5LogDataStore.h  TableBase.cpp
SDK/ELACoreExt/: ELABRTransaction.cpp  ELABRTransaction.h  ELATransaction.cpp
SDK/Ethereum/: EthereumClient.cpp
SDK/Implement/: Enviroment.cpp  IDChainSubWallet.cpp  IdChainSubWallet.cpp  MainchainSubWallet.cpp  MainchainSubWallet.h  MasterWallet.cpp  MasterWallet.h  MasterWalletManager.cpp  MasterWalletManager.h  NeochainSubWallet.cpp  NeochainSubWallet.h  SPVModule.h  SidechainSubWallet.cpp  SidechainSubWallet.h  SubWallet.cpp  SubWallet.h  SubWalletType.h
SDK/KeyStore/: BitcoreWalletClientJson.h  CoinInfo.cpp  (+3 more)
Sample/: Sample.cpp  TestConnectPeer.cpp
Test/: AddressTest.cpp  BTCKeyTest.cpp  BigIntFormatTest.cpp  BloomTest.cpp  CMakeLists.txt  CRCProposalTest.cpp  CreateWithRawTransactionTest.cpp  DIDPayloadInfoTest.cpp  DatabaseManagerTest.cpp  HDKeychainTest.cpp  KeyStoreTest.cpp  KeyTest.cpp  MasterWalletManagerTest.cpp  MasterWalletTest.cpp  MerkleBlockTest.cpp  PayloadCRCouncilMemberClaimNodeTest.cpp  PayloadDeployTest.cpp  PayloadInvokeTest.cpp  PayloadTest.cpp  SignTest.cpp  TestHelper.h  TransactionOutputTest.cpp  TransactionTest.cpp  UtilsTest.cpp  WalletTest.cpp
Wallet/: CMakeLists.txt  ElastosWalletSPV_us_EN.qm  ElastosWalletSPV_us_EN.ts  ElastosWalletSPV_zh_CN.qm  ElastosWalletSPV_zh_CN.ts  Wallet.cpp  changepasswordwindow.cpp  changepasswordwindow.h  changepasswordwindow.ui  createwalletwindow1.cpp  createwalletwindow1.h  createwalletwindow1.ui  createwalletwindow2.cpp  createwalletwindow2.h  createwalletwindow2.ui  createwalletwindow3.cpp  createwalletwindow3.h  createwalletwindow3.ui  createwalletwindow4.cpp  createwalletwindow4.h  createwalletwindow4.ui  doublepasswordinputwindow.cpp  doublepasswordinputwindow.h  doublepasswordinputwindow.ui  getaddressamountwindow.cpp  getaddressamountwindow.h  getaddressamountwindow.ui  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  newpaymentaddresswindow.cpp  newpaymentaddresswindow.h  newpaymentaddresswindow.ui  paymentaddresswindow.cpp  paymentaddresswindow.h  paymentaddresswindow.ui  (+13 more)
Wallet/icons/: AppIcon.icns
Wallet/macOS/: Info.plist.in
Wallet/qrencode/: bitstream.h  config.h  mask.h  mmask.h
(+138 files in other folders)
